# todo-cli-application

./: .coverage  .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
history/prompts/001-basic-level-core-todo-essentials/: 1-basic-todo-crud.spec.prompt.md  1-implement-todo-cli.green.prompt.md  1-todo-cli-app-plan.plan.prompt.md  1-todo-cli-tasks.tasks.prompt.md
history/prompts/001-github-integration/: 1-github-integration-spec.spec.prompt.md
history/prompts/constitution/: 1-amend-hackathon-constitution.constitution.prompt.md
history/prompts/general/: 2-git-commit-pr-workflow.general.prompt.md  3-push-all-branches.general.prompt.md  4-add-full-project-to-main.general.prompt.md
specs/001-basic-level-core-todo-essentials/: data-model.md  implementation-steps.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  testing.md
specs/001-basic-level-core-todo-essentials/checklists/: requirements.md
specs/001-github-integration/: spec.md
specs/001-github-integration/checklists/: requirements.md
src/todo_cli/cli/: main.py
src/todo_cli/models/: task.py
src/todo_cli/services/: task_service.py
tests/: conftest.py
tests/integration/: test_task_service.py
tests/unit/: test_task.py
